--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-git.png" alt="GitHub"></a><br>
+            <a href="x.html" target="tela"><img src="imagens/logo-x.webp" alt="X"></a><br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-linkedin.webp" alt="Linkedin"></a>
         </section>
     </main>
 </body>
